# iam-policy-autopilot

./: .gitattributes  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: release_binary.yml
iam-policy-autopilot-cli/: Cargo.toml
iam-policy-autopilot-cli/src/: main.rs
iam-policy-autopilot-cli/tests/: integration_tests.rs
iam-policy-autopilot-cli/tests/resources/: test_s3_java.java
iam-policy-autopilot-code-review/: Cargo.toml
iam-policy-autopilot-code-review/src/: lib.rs  review_generator.rs
iam-policy-autopilot-code-review/tests/: review_generator_tests.rs
iam-policy-autopilot-code-review/tests/fixtures/review_generator/: empty_diff.toml  python_get_to_put.toml  python_multi_call_same_line.toml  python_multi_service_app.toml  python_multi_service_app_removed.toml  python_multiline_call_full_file.toml  python_new_put_object.toml  python_new_put_object_no_explain.toml  python_same_method_arg_change.toml  unsupported_language.toml
iam-policy-autopilot-lints/src/: lib.rs  no_extract_override.rs
iam-policy-autopilot-mcp-server/src/: lib.rs  mcp.rs
iam-policy-autopilot-mcp-server/tests/: mcp_server_integration_test.rs
iam-policy-autopilot-policy-generation/: Cargo.toml
iam-policy-autopilot-policy-generation/src/: embedded_data.rs  lib.rs  service_configuration.rs
iam-policy-autopilot-policy-generation/src/enrichment/: mod.rs
iam-policy-autopilot-policy-generation/src/extraction/: engine.rs  mod.rs  sdk_model.rs
iam-policy-autopilot-policy-generation/tests/: waiters_extraction.rs
(+248 files in other folders)
